# enclave

./: Cargo.toml  DEPLOYMENT.md  Makefile  README.md  SECURITY.md  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  ci.yml  release.yml
autogen/: README.md
autogen/types/: AccessToken.ts  AddMemberRequest.ts  AuthError.ts  EmailVerificationToken.ts  JwtClaims.ts  LoginAttempt.ts  MagicLinkToken.ts  PasswordResetToken.ts  RefreshTokenRequest.ts  TeamMembershipResponse.ts  index.ts
autogen/types/api/requests/: VerifyEmailRequest.ts  index.ts
autogen/types/api/responses/: AuthResponse.ts  UserResponse.ts  index.ts
autogen/types/audit/: index.ts
autogen/types/core/: ValidationError.ts  index.ts
autogen/types/javascript/audit/: AuditEventType.js  AuditLog.js
autogen/types/javascript/core/: AuthError.js  AuthUser.js  ValidationError.js
autogen/types/javascript/jwt/: JwtClaims.js  TokenPair.js  TokenType.js
autogen/types/javascript/teams/: Team.js  TeamInvitation.js  (+2 more)
autogen/types/jwt/: TokenPair.ts  index.ts
autogen/types/teams/: index.ts
autogen/types/tokens/: index.ts
enclave-codegen/: Cargo.toml
enclave-codegen/src/: jsdoc.rs  lib.rs  main.rs  parser.rs  typescript.rs
examples/: axum_jwt_server.rs  axum_postgres_server.rs  axum_sqlite_server.rs  jwt_server.rs  postgres_server.rs  session_server.rs  sqlite_server.rs
migrations/: 20241220000001_create_users_table.sql  20241220000002_create_access_tokens_table.sql  20241220000003_create_password_reset_tokens_table.sql  20241223000001_create_rate_limits_table.sql  20241227000002_create_teams_table.sql  20241227000006_create_user_team_contexts_table.sql
migrations/audit_log/: 20241220000006_create_audit_logs_table.sql
migrations/postgres/audit_log/: 20241220000006_create_audit_logs_table.sql
migrations/postgres/core/: 20241220000001_create_users_table.sql  20241220000002_create_access_tokens_table.sql  20241220000003_create_password_reset_tokens_table.sql  20241220000004_create_email_verification_tokens_table.sql  20241222000001_add_token_metadata_fields.sql
migrations/postgres/magic_link/: 20241227000001_create_magic_link_tokens_table.sql
migrations/postgres/rate_limit/: 20241220000005_create_login_attempts_table.sql
migrations/postgres/teams/: 20241227000002_create_teams_table.sql  20241227000003_create_team_memberships_table.sql  20241227000004_create_team_invitations_table.sql  20241227000005_create_team_member_permissions_table.sql  20241227000006_create_user_team_contexts_table.sql
migrations/rate_limit/: 20241220000005_create_login_attempts_table.sql
migrations/sqlite/core/: 20241220000002_create_access_tokens_table.sql  20241220000003_create_password_reset_tokens_table.sql
migrations/sqlite/rate_limit/: 20241220000005_create_login_attempts_table.sql
migrations/sqlite/teams/: 20241227000003_create_team_memberships_table.sql  20241227000005_create_team_member_permissions_table.sql  20241227000006_create_user_team_contexts_table.sql
migrations/teams/: 20241227000004_create_team_invitations_table.sql  20241227000005_create_team_member_permissions_table.sql
migrations_sqlite/audit_log/: 20241220000006_create_audit_logs_table.sql
migrations_sqlite/core/: 20241220000001_create_users_table.sql  20241220000004_create_email_verification_tokens_table.sql
migrations_sqlite/magic_link/: 20241227000001_create_magic_link_tokens_table.sql
migrations_sqlite/rate_limit/: 20241223000001_create_rate_limits_table.sql
migrations_sqlite/teams/: 20241227000002_create_teams_table.sql  20241227000004_create_team_invitations_table.sql
scripts/: codegen.sh
src/: config.rs  crypto.rs  lib.rs  repository.rs  secret.rs  tracing_config.rs
src/actions/: change_password.rs  delete_user.rs  forgot_password.rs  get_user.rs  jwt_login.rs  login.rs  logout.rs  mod.rs  prune_expired.rs  refresh_token.rs  request_magic_link.rs  reset_password.rs  send_verification.rs  signup.rs  update_user.rs  verify_email.rs  verify_magic_link.rs
src/api/: cors.rs  dto.rs  handlers.rs  middleware.rs  mod.rs  routes.rs  types.rs
src/api/actix/: cors.rs  handlers.rs  jwt_middleware.rs  middleware.rs  mod.rs  routes.rs  session_handlers.rs  session_middleware.rs  session_routes.rs  test_utils.rs
src/api/axum/: cors.rs  error.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
src/events/: event.rs  listener.rs  mod.rs  registry.rs
src/events/listeners/: logging.rs  mod.rs  tracing.rs
src/jwt/: claims.rs  config.rs  mod.rs  provider.rs  service.rs
src/postgres/: audit_log.rs  email_verification.rs  magic_link.rs  migrations.rs  mod.rs  password_reset.rs  rate_limiter.rs  token.rs  user.rs
src/postgres/teams/: context.rs  invitation.rs  membership.rs  mod.rs  permission.rs  team.rs
src/rate_limit/: limit.rs  limiter.rs  middleware.rs  mod.rs  postgres_store.rs  store.rs
src/repository/: audit_log.rs  audit_log_mock.rs  email_verification.rs  email_verification_mock.rs  magic_link.rs  magic_link_mock.rs  mod.rs  password_reset.rs  password_reset_mock.rs  rate_limiter.rs  rate_limiter_mock.rs  token.rs  token_mock.rs  user.rs  user_mock.rs
src/session/: config.rs  cookie.rs  file_store.rs  memory_store.rs  mod.rs  repository.rs
src/sqlite/: audit_log.rs  email_verification.rs  magic_link.rs  migrations.rs  mod.rs  password_reset.rs  rate_limit_store.rs  rate_limiter.rs  token.rs  user.rs
src/sqlite/teams/: context.rs  invitation.rs  membership.rs  mod.rs  permission.rs  team.rs
src/teams/: mocks.rs  mod.rs  permission_set.rs  repository.rs  traits.rs  types.rs
src/teams/actions/: accept.rs  invite.rs  mod.rs
src/validators/: email.rs  mod.rs  name.rs  password.rs
tests/: e2e_actix.rs  e2e_axum.rs  e2e_jwt.rs  e2e_postgres.rs  e2e_postgres_rate_limit.rs  e2e_sqlite.rs  e2e_teams.rs  security.rs
(+70 files in other folders)
