[package]
name = "enclave"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", optional = true }
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
password-hash = "0.5.0"
rand = "0.8.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"], optional = true }

[features]
default = []
actix = ["actix-web"]
sqlx_postgres = ["sqlx"]

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
