[package]
name = "enclave"
version = "0.1.0"
edition = "2024"
description = "Authentication library for Rust"
license = "MIT"
repository = "https://github.com/thearyanahmed/enclave"
readme = "README.md"
keywords = ["authentication", "auth", "api", "actix", "security"]
categories = ["authentication", "web-programming"]

[dependencies]
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
futures = { version = "0.3", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"], optional = true }
tracing = { version = "0.1", optional = true }
jsonwebtoken = { version = "10.2.0", optional = true, features = ["rust_crypto"] }
hmac = { version = "0.12", optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[features]
default = []
actix = ["actix-web", "actix-cors"]
sqlx_postgres = ["sqlx"]
tracing = ["dep:tracing"]
jwt = ["jsonwebtoken"]
mocks = []
rate_limit = ["futures"]
audit_log = []
sessions = ["actix", "hmac"]
magic_link = []
axum_api = ["axum", "tower", "tower-http"]
teams = []

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
http-body-util = "0.1"

[lints.rust]
unsafe_code = "deny"
unused = { level = "warn", priority = -1 }
# Allowing: generic structs would need Debug bounds on all type params
missing_debug_implementations = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Lint LEVELS (warn/deny/allow) are configured here
# Clippy SETTINGS (thresholds, MSRV) are in clippy.toml
#
# lint groups (lower priority so individual lints can override)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# unwrap/expect restrictions
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"

# error handling
panic = "warn"
panic_in_result_fn = "deny"
indexing_slicing = "warn"

# code quality
clone_on_ref_ptr = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "deny"
unreachable = "warn"

# safety
float_cmp = "deny"
lossy_float_literal = "deny"
as_conversions = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

# style
if_then_some_else_none = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_string_new = "warn"
match_bool = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# allow these pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# allow these nursery lints
future_not_send = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
new_without_default = "allow"
manual_let_else = "allow"
single_match_else = "allow"

[[example]]
name = "jwt_server"
required-features = ["actix", "jwt", "mocks"]

[[example]]
name = "postgres_server"
required-features = ["actix", "sqlx_postgres"]

[[example]]
name = "session_server"
required-features = ["sessions", "mocks"]

[[example]]
name = "axum_jwt_server"
required-features = ["axum_api", "jwt", "mocks"]

[[example]]
name = "axum_postgres_server"
required-features = ["axum_api", "sqlx_postgres"]
