[package]
name = "enclave-codegen"
version = "0.1.0"
edition = "2024"
description = "TypeScript code generator for enclave types"
license = "MIT"
repository = "https://github.com/thearyanahmed/enclave"
readme = "../README.md"
keywords = ["typescript", "codegen", "types"]
categories = ["development-tools"]

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
